# image-smart-renamer

./: .gitignore  README.md  pyproject.toml  start-mac.sh  start-windows.ps1
app/: __init__.py  config.py  main.py  models.py
app/services/: claude_classifier.py  duplicate_detector.py  folder_picker.py  history_repository.py  image_encoder.py  job_manager.py  rename_executor.py  rename_planner.py  rule_repository.py  scanner.py  thumbnail.py
app/static/: app.js  index.html  styles.css
tests/: test_api.py  test_core.py  test_executor.py  test_rules.py
