[project]
name = "image-smart-renamer"
version = "0.1.0"
description = "Local review-first smart image renamer"
requires-python = ">=3.11,<3.13"
dependencies = [
  "anthropic>=0.92.0",
  "fastapi>=0.115.0",
  "pillow>=11.0.0",
  "pydantic>=2.10.0",
  "python-multipart>=0.0.20",
  "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "black>=25.1.0",
  "coverage>=7.6.0",
  "httpx>=0.28.0",
  "isort>=6.0.0",
  "playwright>=1.51.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["anthropic_live: makes a paid Anthropic API request"]

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
